--- a/程序.md
+++ b/程序.md
@@ -982,7 +982,7 @@ https://www.chongdongshequ.com/tags/23.html
 
 
 
-####测试层
+#### 测试层
 
 ```
  //记录上月持仓数值  交换值.
@@ -1032,7 +1032,7 @@ UPDATE vc_user u SET team_this_month_market_value = (select sum(market_value)/1 
 
 ```
 
-####系统相关
+#### 系统相关
 
 ```
 
@@ -1056,7 +1056,55 @@ UPDATE vc_user u SET team_this_month_market_value = (select sum(market_value)/1 
 
 ```命令行
 
+GIT
+http://192.168.0.186:81/jiaoyisuo/site/tree/Dev
 
+接口文档
+http://192.168.0.186:4999/web/#/1?page_id=5
+账号: konglingping@126.com
+      konglongping@126.com
+密码:
+	admin8899
+
+Linux 服务器:
+47.74.152.68
+root
+SM!CNykSN6uIn@9xMi5
+
+nN9J7ZOV3$oWClWH!%N
+
+2019huhy..
+上传监控地址: http://192.168.0.186:8090
+
+数据库:
+47.74.128.243
+root
+zVBmsp1YKVhSoua1n4
+2019guhy..
+
+
+本地Linux centos7:
+root
+admin8899
+
+
+47.75.213.11 
+root 
+2019csh..
+
+vpn
+2019csh
+
+
+
+ShadowsocksR账号 配置信息【OK】：
+
+I P : 47.75.213.11
+端口 : 2333
+密码 : doub.io
+加密 : aes-256-cfb
+协议 : auth_sha1_v4
+混淆 : plain
 
 ```
 
@@ -1081,4 +1129,252 @@ UPDATE vc_user u SET team_this_month_market_value = (select sum(market_value)/1 
 `id`,  `code`,  `name` ,  `sort`,  `basic`,  `rechargeable`,  `withdrawable`,  `tradable` ,  `futuretradable`,  `face_value`,  `withdraw_min_count`,  `withdraw_max_count`,  `withdraw_vip_max_count`,  `withdraw_service_fee`,  `goods_sell_service_rate`,  `goods_buy_service_rate`,  `goods_user_service_rate`,  `status`,  `basic_type`,  `coin_type`,  `token_id`,  `decimals`,  `token_decimals`,  `value_equals_coin`,  `platform_agent_id`,  `leverage_ratios`,  `created_at`,  `updated_at`
 
 ```
+
+### Laravel源码分析
+
+```
+入口 index.php
+引入 app.php ==> 加载Composer生成的自动加载文件 vendor/autoload.php文件 并实例化 Application 实例化$app  或 app();
+
+然后注册服务 provider 或 中间件 middleware
+    $app->register();
+    $app->routeMiddleware();
+    $app->singleton();
+    class_alias("app\Facede\User","User");//创建类别名..
+
+最后执行run()方法:
+     $response = $this->dispatch($request);  分发请求到指定路由到Controller
+     //执行响应. 输出响应内容
+     if ($response instanceof SymfonyResponse) {
+        $response->send();
+     } else {
+        echo (string) $response;
+    }
+```
+
+#### Laravel容器 服务
+
+```
+Application Containner  服务容器:
+提供的注册服务的方法有:
+1.简单绑定
+    $app->bind('要绑定的类名或接口名',function(){
+        return $instance; 返回绑定类或接口的实例
+    });
+2.绑定一个单例
+	$app->singletone('要绑定的类名或接口名',function($app){
+		return $instance; 返回绑定类或接口的实例  一旦单例绑定被解析，相同的对象实例会在随后的调用中返回到容器中：
+	});
+3.直接绑定实例
+	$app->instance('要绑定的类名或接口名',new UserInstance());
+4.绑定要接口实现
+	$app->bind(
+		'interface/UserInterface',
+		'service/UserService'
+	);
+5.上下文绑定
+	$app->when(PhotoController::class)
+          ->needs(Filesystem::class)
+          ->give(function () {
+              return Storage::disk('local');
+           });
+6.扩展绑定  方法可以修改已解析的服务.
+	比如，当一个服务被解析后，你可以添加额外的代码来修饰或者配置它,方法接受一个闭包，该闭包唯一的参数就是这个服务， 并返回修改过的服务：
+	$app->extend(UserService::Class,function($service){
+		return new DecoratedService($service);
+	});
+
+解析实例：
+make() 方法解析实例
+	$app->make('user'); make方法接收你想要解析的类或接口的名字;
+	如果你的代码处于无法访问 $app 变量的位置，则可用全局辅助函数 resolve 来解析
+	$userInstance=resolve('user');
+	如果类依赖不能通过容器解析，你可以通过将它们作为关联数组作为 makeWith 方法的参数注入
+	$api = $this->app->makeWith('HelpSpot\API', ['id' => 1]);
+注入实例
+use app\UserService;
+class UserController extends Controller{
+	protected $user;
+	public function __contruct(UserService $user){
+		$this->user=$user;
+	}
+}
+服务容器每次解析对象会触发一个事件，你可以使用 resolving 方法监听这个事件 :
+$app->resolving(HelpSpot\API::class, function ($api, $app) {
+    // Called when container resolves objects of type "HelpSpot\API"...
+});
+
+```
+
+#### 服务器提供者 provider
+
+```
+所有的服务提供者都会继承 Illuminate\Support\ServiceProvider 类。 大多服务提供者都包含一个 register 和一个 boot 方法。在 register 方法中， 你只需要将事物绑定到服务容器。而不要尝试在 register 方法中注册任何监听器，路由，或者其他任何功能 如果我们要在服务提供者中注册一个 视图合成器 该怎么做？ 这就需要用到 boot 方法了。 该方法在所有服务提供者被注册以后才会被调用， 这就是说我们可以在其中访问框架已注册的所有其它服务：
+namespace App\Providers;
+class AppProvider extends ServiceProvider{
+
+	public function register(){
+		$this->app->singleton(UserInterfade::class,function($app){
+			return new UserService(config('username'));
+		});
+	}
+	/*
+	*如果你的服务提供器注册了许多简单的绑定，你可能想用 bindings 和 singletons 属性替代手动注册每个容器绑定。
+	*当服务提供器被框架加载时，将自动检查这些属性并注册相应的绑定
+	*/
+	public $bindings=[
+		UserInterface::class=>UserService::class,
+		Auth::class=>AuthManager::class
+	];
+	public $singletons=[
+		UserInterface::class=>UserService::class,
+		Auth::class=>AuthManager::class
+	];
+	/**
+	*如果我们要在服务提供者中注册一个 视图合成器 该怎么做？ 这就需要用到 boot 方法了。 
+	* " 该方法在所有服务提供者被注册以后才会被调用 "， 这就是说我们可以在其中访问框架已注册的所有其它服务
+	*/
+	public function boot(){
+			view()->composer('view',function(){
+				//
+			});
+	}
+	// use Illuminate\Contracts\Routing\ResponseFactory;
+    public function boot(ResponseFactory $response)
+    {
+        $response->macro('caps', function ($value) {});
+    }
+}
+注册服务提供者:在配置文件添加:
+    config/app.php
+    'provider'=>[
+        App\Providers\AppProvider::class,
+    ]
+```
+
+#### Facades 门面
+
+```
+Facades 为应用的 服务容器 提供了一个「静态」 接口。Laravel 自带了很多 Facades，可以访问绝大部分功能。Laravel Facades 实际是服务容器中底层类的 「静态代理」 ，相对于传统静态方法，在使用时能够提供更加灵活、更加易于测试、更加优雅的语法。
+所有的 Laravel Facades 都定义在 Illuminate\Support\Facades 命名空间下。所以，我们可以轻松的使用 Facade
+Facade 和辅助函数之间没有实际的区别。当你使用辅助函数时，你可以像测试相应的 Facade 那样进行测试 [主要实现了快捷访问方式]
+	app\Facades\TestFacade.php::::::::::::
+    namespace App\Facades;
+    class TestFacade extends Facade{
+        protected static function getFacadeAccessor(){
+            return 'test';
+        }
+    }
+调用 Helper::info();  首先实例化 服务容器中绑定 helper 实例 然后通过魔术方法 __callStatic() 方法调用实例化出来对象的对应的动态方法
+相当于  $a=new Helper(); $a->info();
+
+app\Test.php  服务类
+    class Test{
+        public function info(){
+            return 'test';
+        }
+    }
+app.php
+	注册实例到服务容器
+	$app->singleton('test',App\Test::class);
+```
+
+#### 合约 contracts
+
+```
+contracts 用以实现面向接口编程;
+定义Contracts
+
+interface CacheRepository{
+	public function get();
+	public function set();
+	public function update();
+}
+
+class Redis implements CacheRepository{
+	public function get(){}
+	public function set(){}
+	public function update(){}
+}
+注入容器:
+	$app->singletone(CacheReposiory::class,Redis::class);
+使用:
+class DaController extends Controller{
+	public $cache;
+	public function __construct(CacheRepository $cache){
+		$this->cache=$cache;
+	}
+}
+```
+
+#### 中间件 Middleware
+
+```
+中间件为过滤进入应用的 Http请求提供的便利的机制..比如登录验证，权限验证.csrf保护等;
+自动生成中间件:
+	php artisan make:middleware  ProtectMiddleware
+定义中间件:
+    class ProtectMiddleware{
+        public function __contruct(){
+
+        }
+        public function handle($request,Closure $next,$guard){
+            //继续之前执行的代码
+            $response=$next($request);
+            //执行之后执行的代码
+            return $response;
+        }
+    }
+注册中间件:
+	若是希望中间件在应用处理每个 HTTP 请求期间运行
+	$app->middleware([
+		ProtectMiddleware::class
+	]);
+	为路由分配中间件
+	$app->routeMiddleware([
+		'protectr'=>ProtectMiddleware::class
+	]);
+使用中间件:
+	为路由分配中间
+	$router->get('/',['middleware'=>'protectr',function(){
+	
+	}]);
+	$router->group(['middleware'=>'protectr'],function($app){
+		$app->any('/user/get/{id}','UserController@index');
+		$app->get('/user/edit/{id}','UserController@edit');
+	});
+
+```
+
+
+
+### 消息队列(message queue)
+
+####Kafka
+
+```
+
+
+
+```
+
+#### ActiveMq
+
+```
+
+
+
+```
+
+#### RabbitMQ
+
+```
+
+
+
+```
+
+
+
+
 
