--- a/前端.md
+++ b/前端.md
@@ -1,4 +1,4 @@
-### es6
+###es6
 
 ### Nodejs
 
@@ -30,9 +30,9 @@ http://javascript.ruanyifeng.com/nodejs/npm.html
 > rm -rf node_modules  删除安装包
 > npm install sax@latest 安装指定的版本 npm install sax@0.1.1  或 npm install sax@">=0.1.0 <0.2.0"
 > npm install readable-stream --save --save-exact
-		--save-exact参数，会在package.json文件指定安装模块的确切版本。
-		--save：模块名将被添加到dependencies，可以简化为参数-S。
-		--save-dev: 模块名将被添加到devDependencies，可以简化为参数-D。
+		--save-exact参数,会在package.json文件指定安装模块的确切版本。
+		--save：模块名将被添加到dependencies,可以简化为参数-S。
+		--save-dev: 模块名将被添加到devDependencies,可以简化为参数-D。
 		
 > npm update <packagename>
 > npm update -g <packagename>
@@ -350,6 +350,20 @@ module.exports={
         // new config.optimization.minimize({sourceMap: true})
     ],
 }
+```
+
+### socket.io
+
+```
+服务器端:
+> npm install socket.io@lastest -g
+var app=require();
+
+客户端:
+
+
+
+
 ```
 
 ### Vue
